# cargo-versioned-crates

./: .gitignore  Cargo.toml  filter-dot
crates/layer-0/: Cargo.toml
crates/layer-0/src/: lib.rs
crates/layer-1/: Cargo.toml
crates/layer-1-0/: Cargo.toml
crates/layer-1-0-latest/: Cargo.toml
crates/layer-1-0-latest/src/: lib.rs
crates/layer-1-0-v1/: Cargo.toml
crates/layer-1-0-v1/src/: lib.rs
crates/layer-1-1/: Cargo.toml
crates/layer-1-1-latest/: Cargo.toml
crates/layer-1-1-latest/src/: lib.rs
crates/layer-1-1-v1/: Cargo.toml
crates/layer-1-latest/: Cargo.toml
crates/layer-1-v1/: Cargo.toml
crates/layer-1-v1/src/: lib.rs
crates/layer-1/src/: lib.rs
crates/layer-2/: Cargo.toml
crates/layer-2/src/: main.rs
