[workspace]
resolver = "2"

exclude = [
    "external/ext-0",
    "external/ext-1",
]

members = [
    "crates/layer-0",
    "crates/layer-1-0",
    "crates/layer-1-1",
    "crates/layer-2",
]

[workspace.package]
version = "0.32.0"

[workspace.dependencies]
ext-0 = { path = "external/ext-0" }
ext-1 = { path = "external/ext-1" }
