[package]
name = "layer-1-1-latest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-0.workspace = true
ext-1 = { path = "../../external/ext-1-latest", package = "ext-1-latest" }
layer-0.path = "../layer-0"
